<resources>
    <string name="app_name">TestDaggerSharedPref</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="hint">Enter you text to save</string>
    <string name="load_success">Text loaded</string>
    <string name="save_success">Text saved</string>
    <string name="load_error">Load Error</string>
    <string name="save_error">Load Error</string>
</resources>
